fixed alignwide media quaery variables

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -9469,7 +9469,7 @@ p {
   margin-right: calc( -100vw / 2 + 100% / 2);
   max-width: 100vw; }
 
-@media (min-width: (sm: 540px, md: 720px, lg: 960px, xl: 1140px) [xl] 80px) {
+@media (min-width: 1220px) {
   .uagb-columns__wrap.alignwide {
     margin-left: -80px;
     margin-right: -80px;
